[gd_scene load_steps=2 format=3 uid="uid://dinkb6rvbmkhj"]

[ext_resource type="Script" uid="uid://cq7bybejjxmkg" path="res://scripts/helpsys.gd" id="1_imlri"]

[node name="Helpsys" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_imlri")

[node name="Questionmark" type="Button" parent="."]
layout_mode = 0
offset_left = 1085.0
offset_top = 16.0
offset_right = 1131.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 30
text = "?"

[node name="Hints" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 523.0
offset_top = 13.0
offset_right = 1139.0
offset_bottom = 376.0

[node name="Panel" type="Panel" parent="Hints"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Hints"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Space_above_hints" type="Label" parent="Hints/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hints/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Space_left_of_hints" type="Label" parent="Hints/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "     "

[node name="VBoxContainer" type="VBoxContainer" parent="Hints/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Hint_1" type="Label" parent="Hints/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "First Hint"

[node name="Hint_2" type="Label" parent="Hints/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Second Hint"

[node name="Hint_3" type="Label" parent="Hints/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Third Hint"

[node name="Space_right_of_hints" type="Label" parent="Hints/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "     "

[node name="Space_under_hints" type="Label" parent="Hints/VBoxContainer"]
layout_mode = 2

[node name="Close" type="Button" parent="Hints"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 83.0
grow_vertical = 0
text = "schlie√üen"

[connection signal="pressed" from="Questionmark" to="." method="_on_questionmark_pressed"]
[connection signal="pressed" from="Hints/Close" to="." method="_on_close_pressed"]
